[FEATURE] Wave Pay prototype

--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,10 @@
                 <input type="radio" name="payment" id="payment-wechat" value="wechat">
                 <label for="payment-wechat">WeChat Pay</label>
               </li>
+              <li>
+                <input type="radio" name="payment" id="payment-wavepay" value="wavepay">
+                <label for="payment-wavepay">Wave Pay</label>
+              </li>
             </ul>
           </nav>
           <div class="payment-info card visible">
